# tanager

./: Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: build.yaml  publish.yaml
crates/tanager/: Cargo.toml
crates/tanager-macros/: Cargo.toml
crates/tanager-macros/src/: lib.rs
crates/tanager/src/: lib.rs
