[package]
name = "tanager-macros"
description = "Parse Rust literal struct expressions using syn."
version = "0.3.0"
authors = [ "Callum Hopkins" ]
edition = "2024"
license = "MIT"
repository = "https://github.com/callum-hopkins-dev/tanager"
readme = "README.md"
documentation = "https://docs.rs/tanager"
keywords = ["proc-macro", "syn", "parse", "derive"]
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", default-features = false, features = ["parsing", "derive", "proc-macro", "printing"] }
