[package]
name = "tanager"
description = "Parse Rust literal struct expressions using syn."
version = "0.1.0"
authors = [ "Callum Hopkins" ]
edition = "2024"
license = "MIT"
repository = "https://github.com/callum-hopkins-dev/tanager"
readme = "README.md"
documentation = "https://docs.rs/tanager"
keywords = ["proc-macro", "syn", "parse", "derive"]
categories = ["development-tools::procedural-macro-helpers", "parser-implementations"]

[dependencies]
proc-macro2 = { version = "1.0.106", default-features = false }
syn = { version = "2.0.117", default-features = false, features = ["parsing"] }
tanager-macros = { version = "0.1.0", path = "../tanager-macros", optional = true }

[features]
default = ["macros"]
macros = ["dep:tanager-macros"]
